--- a/.travis.yml
+++ b/.travis.yml
@@ -33,5 +33,5 @@ after_success:
     fi
 after_failure:
  - cat -n ~/Library/Logs/scan/*
- - cat -n $TMPDIR/com.apple.dt.XCTest-status/Session*.log
+ - cat -n $TMPDIR/com.apple.dt.XCTest-status/Sessio*.log
  - cat -n ~/Library/Logs/DiagnosticReports/xctest*.crash
