--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,10 @@ before_install:
  # - gem uninstall bundler -v '>1.12.5' --force || echo "bundler >1.12.5 is not installed"
  # - gem install bundler -v 1.12.5 --no-rdoc --no-ri --no-document --quiet
  # - gem install fastlane --no-rdoc --no-ri --no-document --quiet
-  - gem install cocoapods --no-rdoc --no-ri --no-document --quiet
+  - rvm install ruby-2.2.2
+  - gem install cocoapods
+  - gem install xcpretty -N
+  - brew update
 script:
   - set -o pipefail
   - xcodebuild -workspace JJNetwork.xcworkspace -scheme JJNetwork -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty -c
