--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,12 @@ matrix:
   include:
    # - osx_image: xcode8
    #   env: FASTLANE_LANE=code_coverage FASTLANE_ENV=default
-    - osx_image: xcode8
-      env: FASTLANE_ENV=ios10_xcode8
-    - osx_image: xcode7.3
-      env: FASTLANE_ENV=ios93_xcode73
-    - osx_image: xcode7.3
-      env: FASTLANE_ENV=ios81_xcode73
+   # - osx_image: xcode8
+    #  env: FASTLANE_ENV=ios10_xcode8
+    #- osx_image: xcode7.3
+    #  env: FASTLANE_ENV=ios93_xcode73
+    #- osx_image: xcode7.3
+    #  env: FASTLANE_ENV=ios81_xcode73
 before_install:
   # Force bundler 1.12.5 because version 1.13 has issues, see https://github.com/fastlane/fastlane/issues/6065#issuecomment-246044617
  # - gem uninstall bundler -v '>1.12.5' --force || echo "bundler >1.12.5 is not installed"
