--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c
-osx_image: xcode7.1
+osx_image: xcode7.3
 sudo: false
 env:
   global:
@@ -28,7 +28,7 @@ before_install:
   #- brew update
 script:
   - set -o pipefail
-  - xcodebuild -workspace JJNetwork.xcworkspace -scheme JJNetwork -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty -c
+  - xcodebuild -workspace JJNetwork.xcworkspace -scheme JJNetwork -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO -destination 'platform=iOS Simulator,name=iPhone 6,OS=latest' | xcpretty -c
 after_success:
   #- if [ "$FASTLANE_LANE" == "code_coverage" ]; then
   #  bash <(curl -s https://codecov.io/bash);
