--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_install:
   #- brew update
 script:
   - set -o pipefail
-  - xcodebuild clean -workspace JJNetwork.xcworkspace -scheme JJNetwork -sdk iphonesimulator PLATFORM_NAME=iphonesimulator -configuration Debug
+  - xcodebuild clean build -workspace JJNetwork.xcworkspace -scheme JJNetwork -sdk iphonesimulator PLATFORM_NAME=iphonesimulator -configuration Debug
   #- xcodebuild -workspace JJNetwork.xcworkspace -scheme JJNetwork -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO -destination 'platform=iOS Simulator,name=iPad' | xcpretty -c
 after_success:
   #- if [ "$FASTLANE_LANE" == "code_coverage" ]; then
